#operation#: Corrections. Display flex pour alignement vertical des enfants ajustés.

--- a/SASS/style.scss
+++ b/SASS/style.scss
@@ -35,6 +35,7 @@ body {
     #location
     --------- */
     #location {
+        // border: 1px solid red;
         width: 100vw;
         height: 3.06rem;
         background-color: var(--ohmyfood-mediumgray);
@@ -97,26 +98,25 @@ body {
     Section #operation
     ------------------- */
     #operation {
-        border: 1px solid red;
-        margin-top: 3.375rem;
+        // border: 1px solid red;
+        margin: 3.375rem 1rem 0 1.31rem;
         height: 24.19rem;
     }
 
     #operation h2 {
         // border: 1px solid green;
         font-size: 1.45rem;
-        margin-top: 0;
-        padding-left: 1.31rem;
+        margin: 0;
     }
 
-    #operation .operation-container {
+    .operation-container {
         margin-top: 2.125rem;
     }
 
-    #operation .operation-container .operation-card {
+    .operation-card {
         border: 1px solid var(--ohmyfood-mediumgray);
         // width: 18.5rem;
-        width: 80%;
+        width: 91%;
         max-width: 20.5rem;
         height: 4.625rem;
         position: relative;
@@ -126,8 +126,11 @@ body {
         box-shadow: 5px 3px 14px 0px rgba(146, 146, 146, 0.65);
             -webkit-box-shadow: 5px 3px 14px 0px rgba(146,146,146,0.65);
             -moz-box-shadow: 5px 3px 14px 0px rgba(146, 146, 146, 0.65);
+        display: flex;
+        align-items: center;//Idéal pour le positionnement en hauteur !
+        
     }
-    #operation .operation-container .operation-card .badge {
+    .badge {
         border: 1px solid var(--ohmyfood-primaire);
         height: 1.44rem;
         width: 1.44rem;
@@ -139,30 +142,38 @@ body {
         padding: 0.3rem;
         text-align: center;
         position: absolute;
-        top: 20px;
         left: -15px;
     }
-    #operation .operation-container .operation-card i {
+    .operation-card i {
         position: absolute;
-        top: 29px;
         left: 38px;
         font-size: 1.2rem;
         color: var(--ohmyfood-darkgray);
     }
-    #operation .operation-container .operation-card .operation-title {
+    .operation-card:nth-child(1) > i {
+        left: 43px;
+    }
+    .operation-title {
         // border: 1px solid green;
         font-weight: 500;
-        font-size: 0.9rem;
+        font-size: 0.7rem;
         position: absolute;
-        top: 32px;
         left: 76px;
+    }
+
+/*  -------------------
+    #restaurants
+    ------------------- */
+    #restaurants {
+        border: 1px solid red;
+
     }
 
 /*  ---------
     Footer
     --------- */
     footer .footer-container img {
-        width: 10.125rem; 
+        width: 10.125rem;
     }
 
 /*  ======================
@@ -178,7 +189,6 @@ body {
         }
         #operation .operation-container .operation-card .operation-title {
             font-size: 1rem;
-            top: 30px;
         }
         
       }
