--- a/css/main.css
+++ b/css/main.css
@@ -437,24 +437,22 @@ nav img {
     Section #operation
     ------------------- */
 #operation {
-  border: 1px solid red;
-  margin-top: 3.375rem;
+  margin: 3.375rem 1rem 0 1.31rem;
   height: 24.19rem;
 }
 
 #operation h2 {
   font-size: 1.45rem;
-  margin-top: 0;
-  padding-left: 1.31rem;
+  margin: 0;
 }
 
-#operation .operation-container {
+.operation-container {
   margin-top: 2.125rem;
 }
 
-#operation .operation-container .operation-card {
+.operation-card {
   border: 1px solid var(--ohmyfood-mediumgray);
-  width: 80%;
+  width: 91%;
   max-width: 20.5rem;
   height: 4.625rem;
   position: relative;
@@ -464,9 +462,11 @@ nav img {
   box-shadow: 5px 3px 14px 0px rgba(146, 146, 146, 0.65);
   -webkit-box-shadow: 5px 3px 14px 0px rgba(146, 146, 146, 0.65);
   -moz-box-shadow: 5px 3px 14px 0px rgba(146, 146, 146, 0.65);
+  display: flex;
+  align-items: center;
 }
 
-#operation .operation-container .operation-card .badge {
+.badge {
   border: 1px solid var(--ohmyfood-primaire);
   height: 1.44rem;
   width: 1.44rem;
@@ -478,24 +478,32 @@ nav img {
   padding: 0.3rem;
   text-align: center;
   position: absolute;
-  top: 20px;
   left: -15px;
 }
 
-#operation .operation-container .operation-card i {
+.operation-card i {
   position: absolute;
-  top: 29px;
   left: 38px;
   font-size: 1.2rem;
   color: var(--ohmyfood-darkgray);
 }
 
-#operation .operation-container .operation-card .operation-title {
+.operation-card:nth-child(1) > i {
+  left: 43px;
+}
+
+.operation-title {
   font-weight: 500;
-  font-size: 0.9rem;
+  font-size: 0.7rem;
   position: absolute;
-  top: 32px;
   left: 76px;
+}
+
+/*  -------------------
+    #restaurants
+    ------------------- */
+#restaurants {
+  border: 1px solid red;
 }
 
 /*  ---------
@@ -520,7 +528,6 @@ footer .footer-container img {
 
   #operation .operation-container .operation-card .operation-title {
     font-size: 1rem;
-    top: 30px;
   }
 }
 
